basic template added

--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -1,3 +1,7 @@
+.app {
+  width: 100%;
+}
+/* 
 
 .dashboard {
     height: 100vh;
@@ -23,4 +27,4 @@
   }
   .dashboard div {
     margin-top: 7px;
-  }
+  } */
