--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -9,8 +9,8 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #dcdcdc;
     padding: 30px;
+    background-color: #242526;
   }
   .login__textBox {
     padding: 10px;
@@ -23,7 +23,7 @@
     margin-bottom: 10px;
     border: none;
     color: white;
-    background-color: black;
+    background-color: grey;
   }
   .login__google {
     background-color: #4285f4;
