--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -9,8 +9,9 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #dcdcdc;
     padding: 30px;
+    background-color: #242526;
+
   }
   .register__textBox {
     padding: 10px;
@@ -23,7 +24,7 @@
     margin-bottom: 10px;
     border: none;
     color: white;
-    background-color: black;
+    background-color: grey;
   }
   .register__google {
     background-color: #4285f4;
