--- a/src/components/components/Header/header.module.scss
+++ b/src/components/components/Header/header.module.scss
@@ -1,13 +1,16 @@
 header {
-  width: 100%;
+  width: 100&;
   display: flex;
   background-color: #b3860a;
   justify-content: flex-start;
   align-items: center;
-
-  img { /* get img bigger */
-    height: 8rem;
-    margin: 1rem;
+  h2 {
+    font-size: 1.2rem;
+  }
+  img {
+    /* get img bigger */
+    height: 5rem;
+    margin: 0.6rem;
   }
   //logout button at the end
   button {
@@ -23,8 +26,4 @@ header {
       background-color: #fff;
     }
   }
-
 }
-
-
-
