--- a/src/components/components/Header/header.module.scss
+++ b/src/components/components/Header/header.module.scss
@@ -1,9 +1,12 @@
 header {
-  width: 100&;
+  width: 100%;
   display: flex;
   background-color: #b3860a;
-  justify-content: flex-start;
+  
+  justify-content: space-between;
   align-items: center;
+  overflow:scroll;
+
   h2 {
     font-size: 1.2rem;
   }
@@ -26,4 +29,9 @@ header {
       background-color: #fff;
     }
   }
+  button-group{
+    justify-content: end;
+  }
 }
+
+
