--- a/src/components/components/Header/header.module.scss
+++ b/src/components/components/Header/header.module.scss
@@ -19,8 +19,9 @@ header {
   button {
     margin-left: auto;
     margin-right: 1rem;
-    background-color: #b3860a;
-    border: none;
+    background-color: darkorchid;
+
+    border-radius: 10px;
     font-size: 1rem;
     font-weight: bold;
     cursor: pointer;
