--- a/src/components/components/Header/header.module.scss
+++ b/src/components/components/Header/header.module.scss
@@ -20,7 +20,7 @@ header {
     margin-left: auto;
     margin-right: 1rem;
     background-color: darkorchid;
-
+    margin-top: 0.2rem;
     border-radius: 10px;
     font-size: 1rem;
     font-weight: bold;
