--- a/src/components/components/BetPage/betpage.module.scss
+++ b/src/components/components/BetPage/betpage.module.scss
@@ -1,11 +1,14 @@
 .betpage{
-    margin: 5%;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     h2{
         text-align: center;
+    }
+    form{
+        align-items: center;
     }
 }
 .teams{
@@ -21,3 +24,10 @@
 .teamview{
     margin:1rem;
 }
+.formContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  }
