--- a/src/components/components/ScoreboardsGrid/scoreboards-grid.module.scss
+++ b/src/components/components/ScoreboardsGrid/scoreboards-grid.module.scss
@@ -29,4 +29,30 @@ h3 {
 }
 
 
+.time {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #fdbe11;
+  text-align: center;
+  margin: 1rem;
+  cursor:pointer;
+}
+
+.date{
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  margin: 1rem;
+}
+.dateDiv{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+.MessageDiv{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
 
