added refferer system: gives +5 balance referrer and reciever

--- a/src/components/components/Profile/profile.module.scss
+++ b/src/components/components/Profile/profile.module.scss
@@ -151,3 +151,16 @@
 .hidden {
     display: none;
   }
+
+
+.formContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    button{
+        width: 15rem;
+        margin-top: 1rem;
+    }
+  }
